# chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chess.c  chess.cpp  chess.h  chess.html  client.c  client.cpp  compile_commands.json  generate_texture_atlas.sh  glad.c  glad.h  main.c  main.frag  main.vert  makefile  networking.c  networking.h  server.c  server.cpp  shared.c  shared.h  spritesheet.aseprite  util.h
.github/workflows/: build-linux.yml  build-windows.yaml  build.yml
backend/: .gitignore  README.md  docker-compose.yml
backend/chess_api/: .gitignore  db-functions.js  error.js  package-lock.json  package.json  server.js
include/: chess.hpp  gl.hpp  io.hpp  message.hpp  server.hpp  session.hpp  window.hpp
shaders/: field.frag  field.vert  piece.frag  piece.vert  procedural_field.frag
src/: chess.cpp  gl.cpp  main.cpp  server.cpp  session.cpp  window.cpp
